Modal can scroll if content is too long Fix.: Modal can stack without becoming unclosable "d" display debug info

--- a/resource/css/modal.css
+++ b/resource/css/modal.css
@@ -38,6 +38,8 @@
 
 .modal .content {
 	padding: 10px;
+	max-height: 400px;
+	overflow-y: scroll;
 }
 
 .modal .footer {
